--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <script>
         let redeemedCodes = new Set();
-        const validCodes = new Set(["GODDESS38", "LADYLUCK", "FESTIVAL2025", "QUEEN38", "WOMENSDAY", "BEAUTYWIN"]);
+        const validCodes = new Set(["20240815"]);
         
         const prizePool = [
             { name: "亚朵星球深睡枕", probability: 0.1, image: "yaduo.png" },
