--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
         const validCodes = new Set(["7A9B3C","D4E8F2","5G6H1J","K3L7M9","N2P8Q4"]);
         
         const prizePool = [
-            { name: "兰蔻小黑瓶", probability: 0.03, image: "lankou1.png" },
-            { name: "兰蔻彩妆盘", probability: 0.03, image: "lankou2.png" },
-            { name: "亚朵星球深睡枕", probability: 0.03, image: "yaduo.png" },
-            { name: "迷你内衣洗衣机", probability: 0.03, image: "xiyi.png" },
+            { name: "兰蔻小黑瓶", probability: 0.03, image: "lankou.png" },
+            { name: "TF20眼影盘", probability: 0, image: "tf.png" },
+            { name: "亚朵星球深睡枕", probability: 0.06, image: "yaduo.png" },
+            { name: "迷你内衣洗衣机", probability: 0, image: "xiyi.png" },
             { name: "京东E卡200元", probability: 0.03, image: "shop200.png" },
             { name: "京东E卡300元", probability: 0.03, image: "shop300.png" },
             { name: "CARD1 - 4728", type: "card", probability: 0.06, image: "gouwu.png" },
@@ -110,7 +110,7 @@
             { name: "CARD4 - 2971", type: "card", probability: 0.06, image: "gouwu.png" },
             { name: "CARD5 - 8432", type: "card", probability: 0.06, image: "gouwu.png" },
             { name: "CARD6 - 5067", type: "card", probability: 0.06, image: "gouwu.png" },
-            { name: "谢谢参与", probability: 0.46, image: "no_prize.png" }
+            { name: "谢谢参与", probability: 0.49, image: "no_prize.png" }
         ];
         
         function drawPrize() {
