--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
 
     <script>
         let redeemedCodes = new Set();
-        const validCodes = new Set(["7A9B3C","D4E8F2","5G6H1J","K3L7M9","N2P8Q4"]);
+        const validCodes = new Set(["ZXDDN8"]);
         
         const prizePool = [
-            { name: "兰蔻小黑瓶", probability: 0.03, image: "lankou.png" },
-            { name: "TF20眼影盘", probability: 0, image: "tf.png" },
-            { name: "亚朵星球深睡枕", probability: 0.06, image: "yaduo.png" },
-            { name: "迷你内衣洗衣机", probability: 0, image: "xiyi.png" },
-            { name: "京东E卡200元", probability: 0.03, image: "shop200.png" },
-            { name: "京东E卡300元", probability: 0.03, image: "shop300.png" },
+            { name: "兰蔻小黑瓶", probability: 0.1, image: "lankou.png" },
+            { name: "TF20眼影盘", probability: 0.04, image: "tf.png" },
+            { name: "亚朵星球深睡枕", probability: 0.04, image: "yaduo.png" },
+            { name: "迷你内衣洗衣机", probability: 0.04, image: "xiyi.png" },
+            { name: "京东E卡200元", probability: 0.0, image: "shop200.png" },
+            { name: "京东E卡300元", probability: 0.04, image: "shop300.png" },
             { name: "CARD1 - 4728", type: "card", probability: 0.06, image: "gouwu.png" },
-            { name: "CARD2 - 9156", type: "card", probability: 0.06, image: "gouwu.png" },
+            { name: "CARD2 - 9156", type: "card", probability: 0.0, image: "gouwu.png" },
             { name: "CARD3 - 6384", type: "card", probability: 0.06, image: "gouwu.png" },
             { name: "CARD4 - 2971", type: "card", probability: 0.06, image: "gouwu.png" },
             { name: "CARD5 - 8432", type: "card", probability: 0.06, image: "gouwu.png" },
             { name: "CARD6 - 5067", type: "card", probability: 0.06, image: "gouwu.png" },
-            { name: "谢谢参与", probability: 0.49, image: "no_prize.png" }
+            { name: "谢谢参与", probability: 0.44, image: "no_prize.png" }
         ];
         
         function drawPrize() {
