--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             { name: "TF20眼影盘", probability: 0.04, image: "tf.png" },
             { name: "亚朵星球深睡枕", probability: 0.04, image: "yaduo.png" },
             { name: "迷你内衣洗衣机", probability: 0.04, image: "xiyi.png" },
+            { name: "内衣消毒烘干机", probability: 0.04, image: "xiaodu.png" },
             { name: "京东E卡200元", probability: 0.0, image: "shop200.png" },
             { name: "京东E卡300元", probability: 0.04, image: "shop300.png" },
             { name: "CARD1 - 4728", type: "card", probability: 0.06, image: "gouwu.png" },
@@ -110,7 +111,7 @@
             { name: "CARD4 - 2971", type: "card", probability: 0.06, image: "gouwu.png" },
             { name: "CARD5 - 8432", type: "card", probability: 0.06, image: "gouwu.png" },
             { name: "CARD6 - 5067", type: "card", probability: 0.06, image: "gouwu.png" },
-            { name: "谢谢参与", probability: 0.44, image: "no_prize.png" }
+            { name: "谢谢参与", probability: 0.4, image: "no_prize.png" }
         ];
         
         function drawPrize() {
