--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <script>
         let redeemedCodes = new Set();
-        const validCodes = new Set(["ZXDDN8"]);
+        const validCodes = new Set(["TCH983","CH2YUT","POIU98","4REUY0"]);
         
         const prizePool = [
             { name: "兰蔻小黑瓶", probability: 0.1, image: "lankou.png" },
